Add Rory character to TechSplore game
- Added new character 'Rory' with star emoji (🌟)
- Updated assetConfig.js to include Rory character image
- Added Rory character option to customization screen in index.html
- Character is fully functional with all game mechanics
- Image path: assets/characters/rory.png

--- a/index.html
+++ b/index.html
@@ -77,6 +77,12 @@
                         </div>
                         <span>Elsie 👱‍♀️</span>
                     </div>
+                    <div class="character-option" data-character="rory">
+                        <div class="character-preview rory">
+                            <img src="assets/characters/rory.png" alt="Rory">
+                        </div>
+                        <span>Rory 🌟</span>
+                    </div>
                 </div>
             </div>
             
